fix: align text + update fonts

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -39,6 +39,17 @@ a:hover {
   color: #535bf2;
 }
 
+html {
+  font-family:
+    ui-sans-serif,
+    system-ui,
+    sans-serif,
+    Apple Color Emoji,
+    Segoe UI Emoji,
+    Segoe UI Symbol,
+    Noto Color Emoji;
+}
+
 html,
 body {
   max-width: 100vw;
