--- a/src/components/Admin/CreatePollForm/components/index.module.css
+++ b/src/components/Admin/CreatePollForm/components/index.module.css
@@ -120,7 +120,7 @@
   flex: 1;
   display: flex;
   flex-direction: column;
-  gap: 20px;
+  gap: 18px;
 }
 
 .text-fields > ::placeholder {
